--- a/public/css/partials/projectCard.css
+++ b/public/css/partials/projectCard.css
@@ -44,7 +44,7 @@
 		max-width: 13.25rem;
 	}
 	.project-cards li.card__item.allprojects-card a header h3 {
-		max-width: calc(100vw - 12.9rem);
+		max-width: calc(100vw - 13.8rem);
 	}
 
 	.project-cards li.card__item a header img {
@@ -127,7 +127,7 @@
 	}
 
 		.project-cards li.card__item.allprojects-card .projectCard__progress div > p:last-of-type {
-			padding: 0 0.375rem 0.1rem 0.375rem;
+			padding: 0 0.375rem;
 			color: var(--light);
 			background-color: var(--primary-color);
 			border-radius: 0.25rem;
@@ -200,6 +200,7 @@
 			.project-cards li.card__item.allprojects-card a header .header__title {
 				flex-direction: column;
 				align-items: flex-start;
+				gap: 0.4rem;
 			}
 
 			.project-cards li.card__item.allprojects-card a header .header__members {
